kubernetes/platform/config/oauth2-proxy/oauth2-proxy-route.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: oauth2-proxy
spec:
  parentRefs:
    - name: internal
      namespace: istio-gateway
  hostnames:
    - "oauth2-proxy.${internal_domain}"
  rules:
    - backendRefs:
        - name: oauth2-proxy
          port: 4180
